o Updated to top-level multi-module project.
git-svn-id: http://svn.jomc.org/svnroot/jomc/jomc-sequences/trunk@1409 aee2edba-5628-49ba-b8b8-0e9d4ac63d57